--- a/ArmyTechTask/ArmyTechTask.csproj
+++ b/ArmyTechTask/ArmyTechTask.csproj
@@ -15,11 +15,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ArmyTechTask.DataAccess\ArmyTechTask.DataAccess.csproj" />
     <ProjectReference Include="..\ArmyTechTask.Models\ArmyTechTask.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
   </ItemGroup>
 
 </Project>
